deploy/multitool-readiness-probe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: multitool
  name: multitool
spec:
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - image: praqma/network-multitool
        name: network-multitool
        readinessProbe:
          exec:
            command:
            - cat
            - /tmp/ready
          initialDelaySeconds: 5
          periodSeconds: 1
      affinity:
        podAntiAffinity: 
          preferredDuringSchedulingIgnoredDuringExecution: 
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: multitool
              topologyKey: topology.kubernetes.io/zone
            weight: 1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: multitool
  name: multitool
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: multitool
